<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".ui.settings.MuadhdhinSelectionFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="اختيار صوت المؤذن"
        android:textColor="@color/darker_green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_adhan_sounds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <RadioButton
            android:id="@+id/radio_adhan_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adhan_sound_1"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/radio_adhan_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adhan_sound_2"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/radio_adhan_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adhan_sound_3"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:padding="8dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_save_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="حفظ الاختيار"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_adhan_sounds" />

</androidx.constraintlayout.widget.ConstraintLayout>
